--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
     "slick-carousel": "^1.8.1"
   }
 }
