--- a/config/database.yml
+++ b/config/database.yml
@@ -22,11 +22,4 @@ test:
 
 production:
   <<: *default
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  host: <%= ENV['DB_HOSTNAME'] %>
-  port: <%= ENV['DB_PORT'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
-  database: <%= ENV['DB_NAME'] %>
+  database: db/production.sqlite3
